<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/iv_flag"
        android:contentDescription="@string/iv_flag_description"
        android:layout_width="160dp"
        android:layout_height="120dp" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/iv_flag"
        android:layout_toEndOf="@+id/iv_flag"
        android:layout_marginLeft="8dp"
        android:layout_marginStart="8dp"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvCountry"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/abc_search_url_text_holo"
            android:text="@string/tv_country" />

        <TextView
            android:id="@+id/tvPlace"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/abc_search_url_text_holo"
            android:text="@string/tv_place" />

    </LinearLayout>

</RelativeLayout>